--- a/Jogos.html
+++ b/Jogos.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <section>
+
     <header>
         
         <ul>
@@ -20,6 +22,7 @@
          <li><a href="./Jogos.html">Outros jogos </a></li>
 
         </ul>
+    </section>
             </header>
             <p>Sim! life is strange tem outros jogos que dão sequencia ou são historia toltamente diferentes,sendo eles:</p>
             <h1>Life Is Strange: Before the Storm</h1> 
