--- a/Sobre.html
+++ b/Sobre.html
@@ -9,6 +9,9 @@
 <body>
     <header>
         <main>
+            <footer>
+
+            
         <nav>
         <ul>
 
@@ -20,6 +23,7 @@
             <li><a href="./Jogos.html">Outros jogos </a></li>
         </ul>
     </nav>
+</footer>
     </main>
             </header> 
             <h1>Enredo</h1>
