--- a/Bonus.html
+++ b/Bonus.html
@@ -23,7 +23,7 @@
         </ul>
             </header> 
             <h1>Bônus</h1>
-            <p>Galeria de imagens,criei animaçoes,tornando o site mais atraente e mais dinamico,utilizei o CSS,coloquei um video tambem,coloquei imagem no fundo.</p>
+            <p>Galeria de imagens,criei animaçoes,tornando o site mais atraente e mais dinamico,utilizei o CSS,coloquei um video tambem,coloquei imagem no fundo,usei o id para nomear uma tag especifica.</p>
             
 
 </body>
