--- a/Jogos.html
+++ b/Jogos.html
@@ -24,7 +24,7 @@
         </ul>
     </section>
             </header>
-            <p>Sim! life is strange tem outros jogos que dão sequencia ou são historia toltamente diferentes,sendo eles:</p>
+            <p id="box">Sim! life is strange tem outros jogos que dão sequencia ou são historia toltamente diferentes,sendo eles:</p>
             <h1>Life Is Strange: Before the Storm</h1> 
             <img src="./img/jogo1.jpg" alt="Life Is Strange: Before the Storm">
             <p>Você joga com a Chloe Price, uma adolescente de 16 anos, que desenvolve uma amizade inesperada com Rachel Amber, uma garota bonita e popular destinada ao sucesso. Quando Rachel descobre um segredo familiar que ameaça destruir o mundo dela, é sua recém formada amizade com Chloe que dá forças para ela seguir em frente. Agora juntas, as garotas precisam confrontar os demônios uma da outra e encontrar uma forma de superá-los.A prequel se passa em maio de 2010, três anos antes dos eventos do primeiro jogo. Pouco depois da mãe da Chloe, Joyce Price, se reunir com o seu futuro padrasto, David Madsen. O jogo destaca a volta dos personagens William Price, Frank Bowers, Nathan Prescott e Victoria Chase, e também a volta de personagens secundários, como o Caminhoneiro. A história foca na vida de Chloe como uma estudante de ensino médio na Academia Blackwell, além da relação entre Chloe e Rachel e os eventos que formaram esse vínculo.
