--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
     <img src="./img/foto4.jpg" alt="">
     <img src="./img/foto9.jpg" alt=""> 
 </div>
-<h1>Redes sociais</h1>
+<h1>Redes Sociais</h1>
 </body>
 <footer>
-    <a href="https://github.com/Gabrielf2424"><img src="img/foto14.webp" alt=""</a width="960px">
-    <a href="https://www.instagram.com/eu_gabriel_32/"><img  src="./img/aaaaaaaa.png" alt=""</a width="700px">
+    <a href="https://github.com/Gabrielf2424"><img src="img/foto14.webp" alt=""</a width="960px" id="git">
+        <a href="https://www.instagram.com/eu_gabriel_32/"><img  src="./img/aaaaaaaa.png" alt=""</a width="700px" id="Rede">
+
 </footer>
 
 </html>
